[VAS-1195] new collection mongo